# tree-sitter-lib-baremetal

./: CMakeLists.txt  LICENSE  README.md
inc/tree_sitter/: parser.h
tree-sitter-javascript/: parser.c
